--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "info",
+  "name": "portfolio",
+  "homepage": "https://alessandrorlm.github.io/portfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
