--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "portfolio",
-  "homepage": "https://alessandrorlm.github.io/portfolio",
+  "homepage": "https://alessandrorlm.github.io/Portfolio/",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
