--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -38,6 +38,10 @@ jobs:
         run: bun install
       - name: Build
         run: bun run build
+        env:
+          VITE_SERVICE_ID: ${{ vars.VITE_SERVICE_ID }}
+          VITE_TEMPLATE_ID: ${{ vars.VITE_TEMPLATE_ID }}
+          VITE_PUBLIC_KEY: ${{ vars.VITE_PUBLIC_KEY }}
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Upload artifact
